# SPDClient-NoRoot-Termux

./: README.md  pyproject.toml  spd.py  spd_main.py
