[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SPDClient-NoRoot-Termux"
version = "1.0.0"
description = "Optimized Unisoc flashing protocol utility for Termux (No-Root)"
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "colorama"
]

[project.scripts]
spd = "spd_main:main"

[tool.hatch.build.targets.wheel.force-include]
"spd_main.py" = "spd_main.py"
"spd.py" = "spd.py"
"spdclient" = "spdclient"
